# donneesqc-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  EXAMPLES.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  tag_version.sh
.github/workflows/: ci.yml
helpers/: ckan_api.py  config.py  coords.py  geo_api.py  http_client.py
tests/: conftest.py  test_ckan_api.py  test_http_client.py  test_new_helpers.py  test_new_tools.py  test_sql_validation.py  test_tools_dq.py  test_tools_geo.py  test_tools_mtl.py
tools/: __init__.py  auto_detect_resource.py  compare_datasets.py  convert_coordinates.py  describe_geospatial_layer.py  download_resource.py  find_and_query.py  geocode.py  get_catalog_stats.py  get_dataset_info.py  get_geospatial_features.py  get_map_url.py  get_organization_info.py  get_resource_info.py  get_version.py  list_dataset_resources.py  list_geospatial_layers.py  list_organizations.py  list_tools_with_examples.py  preview_resource.py  query_montreal_data.py  query_montreal_sql.py  query_resource_data.py  query_resource_sql.py  reverse_geocode.py  search_datasets.py  search_montreal_datasets.py  spatial_intersection.py  suggest_sql.py
